[package]
name = "process-freezer"
version = "0.1.0"
authors = ["ElXreno <elxreno@gmail.com>"]
license = "MPL-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Profiles
[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[dependencies]
procfs = "0.8.1"
nix = "0.20.2"
